--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <div id="viewContainer">
-    <canvas data-four-d-model="120cell" id="modelView" width="1024" height="1024" style="width: 100%; height: 100%;" />
+    <canvas data-four-d-model="cliffordTorus" id="modelView" width="1024" height="1024" style="width: 100%; height: 100%;" />
 </div>
 
 </body></html>
