Moved torus code to a separate script file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- saved from url=(0081)http://webglsamples.googlecode.com/hg/google-io/2011/10000-objects-optimized.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title>clif4d</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script type="text/javascript" src="/webgl/tdl/base.js"></script>
-<script type="text/javascript" src="/webgl/glMatrix-0.9.5.min.js"></script>
+<script type="text/javascript" src="./webgl/tdl/base.js"></script>
+<script type="text/javascript" src="./webgl/glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="clif4d-WebGL-tdl.js" ></script>
+<script type="text/javascript" src="torus.js" ></script>
 
 </head>
 <body>
