Add 4D rotation class, and hook it up.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="./webgl/glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="clif4d-WebGL-tdl.js" ></script>
 <script type="text/javascript" src="torus.js" ></script>
+<script type="text/javascript" src="rotate4d.js" ></script>
 
 </head>
 <body>
